# AI-voice-Sales

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: livekit_demo_sequence.md  系统架构与数据流.md
qwen-asr-streaming-service/: README.md  __init__.py  convert_wav.py  pyproject.toml  server.py  test_ws.py
qwen-livekit-stt/: __init__.py  qwen_livekit_stt.py
src/: agent.py  agent_Local.py  assistant.py  metrics_hooks.py  metrics_logger.py  observability.py  prompt.py  rule_kb.py
