[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-starter-python"
version = "1.0.0"
description = "Simple voice AI assistant built with LiveKit Agents for Python"
requires-python = ">=3.10, <3.15"

dependencies = [
    "livekit-agents[minimax,silero,turn-detector]~=1.4",
    "livekit-plugins-aliyun",
    "livekit-plugins-openai~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "silero-vad>=6.2.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "omegaconf>=2.3.0",
    "soundfile>=0.13.1",
    "funasr>=1.3.1",
    "pyaudio>=0.2.14",
    "dashscope>=1.25.14",
    "livekit-plugins-volcengine>=1.2.8",
    "paramiko>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
livekit-plugins-aliyun = { path = "../livekit-plugins-aliyun-custom", editable = true }
